# django-jsheet

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
django-jsheet/core/: django_sheet.py
django-sheet/core/: django_sheet.py
django-sheet/templatetags/: jsheet.py
django_jsheet/: __init__.py
django_jsheet/assets/: index.js
django_jsheet/src/: __init__.py
django_jsheet/src/core/: constats.py  django_sheet.py  views.py
django_jsheet/src/core/assets/: constats.json  fetch_js.js
django_jsheet/src/templatetags/: jspread_import.py
src/django_jsheet/core/: django_sheet.py  views.py
src/django_jsheet/templatetags/: jsheet.py
